--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ img {
 .outer-shadow {
   box-shadow: var(--outer-shadow);
 }
+.inner-shadow {
+  box-shadow: var(--inner-shadow);
+}
 .hover-in-shadow {
   position: relative;
   z-index: 1;
@@ -127,8 +130,8 @@ header
   border-radius: 50%;
   transition: all 0.3s ease;
 }
-.header .hamburger-btn::after{
-    border-radius: 50%;
+.header .hamburger-btn::after {
+  border-radius: 50%;
 }
 
 .header .hamburger-btn span {
@@ -152,4 +155,71 @@ header
 }
 .header .hamburger-btn span:after {
   top: 6px;
+}
+
+/*------------ 
+navigation menu
+------------ */
+.nav-menu {
+  position: fixed;
+  background-color: var(--bg-black-50);
+  padding: 0 15px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 999;
+  overflow-y: auto;
+}
+
+.nav-menu .close-nav-menu {
+  height: 40px;
+  width: 40px;
+  display: block;
+  font-size: 35px;
+  line-height: 35px;
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+  color: var(--text-black-600);
+}
+.nav-menu .close-nav-menu::after {
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+.nav-menu-inner {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav-menu ul {
+  padding: 15px;
+}
+.nav-menu ul li {
+  display: block;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.nav-menu ul li:last-child {
+  margin-bottom: 0;
+}
+.nav-menu ul li a {
+  display: inline-block;
+  font-size: 28px;
+  font-weight: 600;
+  color: var(--text-black-700);
+  padding: 5px 30px;
+  text-transform: uppercase;
+  border-radius: 30px;
+  transition: all 0.3s ease;
+}
+.nav-menu ul li a.active {
+  color: var(--skin-color);
+}
+.nav-menu ul li a:after {
+  border-radius: 30px;
 }
