--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,9 @@ navigation menu
   top: 0;
   height: 100%;
   width: 100%;
-  z-index: 999;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
   overflow-y: auto;
 }
 
@@ -222,4 +224,12 @@ navigation menu
 }
 .nav-menu ul li a:after {
   border-radius: 30px;
+}
+.nav-menu .copyright-text {
+  position: absolute;
+  top: 50%;
+  font-size: 15px;
+  color: var(--text-black-600);
+  transform: translateY(-50%) rotate(-90deg);
+  left: -76px;
 }
