--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
+.align-items-center {
+  align-items: center;
+}
 .justify-content-between {
   justify-content: space-between;
 }
@@ -92,6 +95,21 @@ img {
   box-shadow: var(--inner-shadow);
 }
 
+.btn-1{
+    display: inline-block;
+    padding: 10px 25px;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--skin-color);
+    background-color: transparent;
+    line-height: 1.5;
+    cursor: pointer;
+    border-radius: 30px;
+    transition: all 0.3s ease;
+}
+.btn-1:after {
+    border-radius: 30px;
+}
 /* ------ 
 header
 --------- */
@@ -232,4 +250,52 @@ navigation menu
   color: var(--text-black-600);
   transform: translateY(-50%) rotate(-90deg);
   left: -76px;
+}
+
+/* ------------------ 
+Home Section
+---------------------*/
+.home-section .full-screen {
+  padding: 50px 0;
+  min-height: 100vh;
+}
+.home-section .home-text,
+.home-section .home-img {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 0 15px;
+}
+.home-section .home-text p {
+  color: var(--text-black-300);
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 0;
+}
+.home-section .home-text h2 {
+  font-size: 55px;
+  font-weight: 700;
+  color: var(--text-black-900);
+  margin: 0;
+}
+.home-section .home-text h1 {
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--text-black-700);
+  margin: 0;
+}
+.home-section .home-text .btn-1{
+    margin-top: 30px;
+}
+
+.home-section .home-img .img-box {
+  max-width: 450px;
+  display: block;
+  margin: auto;
+  padding: 15px;
+  border-radius: 50%;
+}
+.home-section .home-img .img-box img {
+  width: 100%;
+  border-radius: 50%;
+  border: 10px solid transparent;
 }
