--- a/css/style.css
+++ b/css/style.css
@@ -95,20 +95,44 @@ img {
   box-shadow: var(--inner-shadow);
 }
 
-.btn-1{
-    display: inline-block;
-    padding: 10px 25px;
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--skin-color);
-    background-color: transparent;
-    line-height: 1.5;
-    cursor: pointer;
-    border-radius: 30px;
-    transition: all 0.3s ease;
+.btn-1 {
+  display: inline-block;
+  padding: 10px 25px;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--skin-color);
+  background-color: transparent;
+  line-height: 1.5;
+  cursor: pointer;
+  border-radius: 30px;
+  transition: all 0.3s ease;
 }
 .btn-1:after {
-    border-radius: 30px;
+  border-radius: 30px;
+}
+
+.section-title {
+  padding: 0 15px;
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: center;
+  margin-bottom: 60px;
+  
+}
+.section-title h2 {
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--text-black-900);
+  text-transform: uppercase;
+  margin: 0;
+}
+.section-title h2::before {
+  content: attr(data-heading);
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--skin-color);
 }
 /* ------ 
 header
@@ -283,8 +307,8 @@ Home Section
   color: var(--text-black-700);
   margin: 0;
 }
-.home-section .home-text .btn-1{
-    margin-top: 30px;
+.home-section .home-text .btn-1 {
+  margin-top: 30px;
 }
 
 .home-section .home-img .img-box {
@@ -298,4 +322,43 @@ Home Section
   width: 100%;
   border-radius: 50%;
   border: 10px solid transparent;
+}
+
+/* ----------
+about section
+------------- */
+.about-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.about-section .about-img {
+  flex: 0 0 40%;
+  max-width: 40%;
+  padding: 0 15px;
+}
+.about-section .about-img .img-box {
+  padding: 15px;
+  border-radius: 5px;
+}
+.about-section .about-img .img-box img{
+  width: 100%;
+  border: 10px solid transparent;
+  border-radius: 5px;
+}
+.about-section .about-info{
+  flex: 0 0 60%;
+  max-width: 60%;
+  padding: 0 15px;
+}
+.about-section .about-info p{
+  font-size: 16px;
+  line-height:26px;
+  margin-bottom: 15px;
+  color: var(--text-black-600);
+}
+.about-section .about-info span{
+  font-weight: 600;
+}
+.about-section .about-info .btn-1{
+  margin: 30px 20px 0 0;
 }
