--- a/css/style.css
+++ b/css/style.css
@@ -409,8 +409,12 @@ about section
 .about-section .tab-content {
   flex: 0 0 100%;
   max-width: 100%;
+  display: none;
 }
-.about-section .skills{
+.about-section .tab-content.active {
+  display: block;
+}
+.about-section .skills {
   padding: 0 0 40px;
 }
 .about-section .skills .skill-item {
@@ -450,41 +454,108 @@ about section
   margin-top: -40px;
 }
 
-/* .about-section .tab-content {
+.about-section .experience {
+  padding-bottom: 80px;
+}
+.about-section .education {
+  padding-bottom: 80px;
+}
+.about-section .timeline {
   flex: 0 0 100%;
   max-width: 100%;
-}
-.about-section .skills .skill-item {
-  flex: 0 0 50%;
-  max-width: 50%;
-  padding: 0 15px;
-}
-.about-section .skills .skill-item p {
-  font-size: 16px;
-  color: var(--text-black-600);
-  text-transform: capitalize;
-  margin: 0 0 10px;
-}
-.about-section .skills .skill-item .progress {
-  height: 20px;
-  border-radius: 10px;
   position: relative;
 }
-.about-section .skills .skill-item .progress-bar {
-  background-color: var(--text-black-600);
-  height: 6px;
-  left: 7px;
-  top: 7px;
-  position: absolute;
-  border-radius: 10px;
-}
-.about-section .skills .skill-item .progress-bar span {
-  position: absolute;
-  right: 0;
+.about-section .timeline::before {
+  content: "";
+  height: 100%;
+  width: 1px;
+  left: 50%;
   top: 0;
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--text-black-600);
-  margin-top: -40px;
+  background-color: var(--bg-black-100);
+  position: absolute;
 }
- */
+.about-section .timeline .timeline-item {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 15px;
+}
+.about-section .timeline .timeline-item:nth-child(odd) {
+  padding-right: calc(50% + 50px);
+  text-align: right;
+}
+.about-section .timeline .timeline-item:nth-child(even) {
+  padding-left: calc(50% + 50px);
+}
+.about-section .timeline .timeline-item-inner {
+  padding: 30px;
+  border-radius: 5px;
+  position: relative;
+}
+.about-section .timeline .timeline-item-inner::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 1px;
+  top: 37px;
+  background-color: var(--bg-black-100);
+  z-index: -1;
+}
+.about-section
+  .timeline
+  .timeline-item:nth-child(odd)
+  .timeline-item-inner::before {
+  right: -30px;
+}
+.about-section
+  .timeline
+  .timeline-item:nth-child(even)
+  .timeline-item-inner::before {
+  left: -30px;
+}
+.about-section .timeline .timeline-item-inner .icon {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  border: 1px solid var(--bg-black-100);
+  background-color: var(--bg-black-50);
+  font-size: 16px;
+  color: var(--skin-color);
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  top: 18px;
+}
+.about-section .timeline .timeline-item:nth-child(odd) .icon {
+  right: -70px;
+}
+.about-section .timeline .timeline-item:nth-child(even) .icon {
+  left: -70px;
+}
+.about-section .timeline .timeline-item-inner span {
+  display: block;
+  font-weight: 500;
+  color: var(--skin-color);
+  margin: 0 0 10px;
+  text-transform: capitalize;
+}
+.about-section .timeline .timeline-item-inner h3 {
+  font-size: 20px;
+  color: var(--text-black-700);
+  font-weight: 600;
+  margin: 0 0 5px;
+  text-transform: capitalize;
+}
+.about-section .timeline .timeline-item-inner h4 {
+  font-size: 16px;
+  font-style: italic;
+  color: var(--text-black-600);
+  margin: 0;
+}
+
+.about-section .timeline .timeline-item-inner p {
+  font-size: 16px;
+  font-style: italic;
+  color: var(--text-black-600);
+  line-height: 26px;
+  margin: 15px 0 0;
+}
