--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,106 @@ img {
   font-weight: 600;
   color: var(--skin-color);
 }
+
+@keyframes fadeInTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-25px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes rotateAnimation {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.effect-wrap .effect {
+  position: absolute;
+  z-index: -1;
+}
+.effect-1 {
+  width: 40px;
+  height: 40px;
+  border: 4px solid #8a49ff;
+  right: 10%;
+  bottom: 10%;
+  animation: spin 10s linear infinite;
+}
+.effect-2 {
+  left: 3%;
+  bottom: 20%;
+  width: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  animation: topBounce 3s ease-in-out infinite;
+}
+.effect-2 div {
+  width: 4px;
+  height: 4px;
+  background-color: #ff9c07;
+  margin: 0 3px 8px;
+}
+.effect-3 {
+  height: 180px;
+  width: 180px;
+  border: 25px solid var(--skin-color);
+  border-radius: 50%;
+  left: 50%;
+  top: -120px;
+  animation: leftBounce 3s ease-in-out infinite;
+}
+.effect-4 {
+  border-top: 30px solid transparent;
+  border-left: 30px solid #06d79c;
+  left: 30%;
+  top: 20%;
+  animation: spin 15s linear infinite;
+}
+.effect-4::before {
+  content: "";
+  border-top: 30px solid transparent;
+  border-left: 30px solid #06d79c;
+  position: absolute;
+  opacity: 0.5;
+  top: -25px;
+  left: -35px;
+}
+@keyframes leftBounce {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50px);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes topBounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+}
 /* ------ 
 header
 --------- */
@@ -157,6 +257,7 @@ header
   border-radius: 50%;
   font-weight: 600;
   text-transform: uppercase;
+  animation: rotateAnimation 2s ease 0s 1 normal forwards;
 }
 .header .hamburger-btn {
   height: 40px;
@@ -278,6 +379,9 @@ navigation menu
 /* ------------------ 
 Home Section
 ---------------------*/
+.home-section {
+  position: relative;
+}
 .home-section .full-screen {
   padding: 50px 0;
   min-height: 100vh;
@@ -413,6 +517,7 @@ about section
 }
 .about-section .tab-content.active {
   display: block;
+  animation: fadeInTop 0.5s ease;
 }
 .about-section .skills {
   padding: 0 0 40px;
