--- a/css/style.css
+++ b/css/style.css
@@ -664,3 +664,54 @@ about section
   line-height: 26px;
   margin: 15px 0 0;
 }
+
+/* -----------
+services section
+-------------- */
+.service-section {
+  padding: 80px 0;
+  min-height: 100vh;
+}
+.service-section .service-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.service-section .service-item-inner {
+  padding: 50px 15px;
+  border-radius: 5px;
+  text-align: center;
+  width: 100%;
+}
+.service-section .service-item-inner:hover .icon i{
+  color: var(--skin-color);
+}
+.service-section .service-item-inner .icon {
+  height: 60px;
+  width: 60px;
+  text-align: center;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 30px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+.service-section .service-item-inner .icon i{
+  font-size: 25px;
+  line-height: 60px;
+  transition: all 0.3s ease;
+}
+.service-section .service-item-inner h3{
+  font-size: 20px;
+  color: var(--text-black-700);
+  margin: 0 0 10px;
+  text-transform: capitalize;
+}
+.service-section .service-item-inner p{
+  font-size: 16px;
+  color: var(--text-black-600);
+  margin: 0;
+  line-height: 26px;
+}
