--- a/css/style.css
+++ b/css/style.css
@@ -685,7 +685,7 @@ services section
   text-align: center;
   width: 100%;
 }
-.service-section .service-item-inner:hover .icon i{
+.service-section .service-item-inner:hover .icon i {
   color: var(--skin-color);
 }
 .service-section .service-item-inner .icon {
@@ -698,20 +698,55 @@ services section
   text-align: center;
   transition: all 0.3s ease;
 }
-.service-section .service-item-inner .icon i{
+.service-section .service-item-inner .icon i {
   font-size: 25px;
   line-height: 60px;
   transition: all 0.3s ease;
 }
-.service-section .service-item-inner h3{
+.service-section .service-item-inner h3 {
   font-size: 20px;
   color: var(--text-black-700);
   margin: 0 0 10px;
   text-transform: capitalize;
 }
-.service-section .service-item-inner p{
+.service-section .service-item-inner p {
   font-size: 16px;
   color: var(--text-black-600);
   margin: 0;
   line-height: 26px;
+}
+
+/* -------------------
+portfolio section
+--------------------- */
+.portfolio-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.portfolio-section .section-title{
+  margin-bottom: 40px;
+}
+.portfolio-section .portfolio-filter{
+  padding: 0 15px;
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: center;
+}
+.portfolio-section .filter-item{
+  display: inline-block;
+  margin: 0 5px 10px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-weight: 500;
+  color: var(--text-black-600);
+  text-transform: capitalize;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+.portfolio-section .filter-item:hover:not(.active){
+  opacity: .5;
+}
+.portfolio-section .filter-item.active{
+  color: var(--skin-color);
 }
