--- a/css/style.css
+++ b/css/style.css
@@ -731,6 +731,7 @@ portfolio section
   flex: 0 0 100%;
   max-width: 100%;
   text-align: center;
+  margin-bottom: 20px;
 }
 .portfolio-section .filter-item{
   display: inline-block;
@@ -749,4 +750,12 @@ portfolio section
 }
 .portfolio-section .filter-item.active{
   color: var(--skin-color);
+}
+.portfolio-section .portfolio-item{
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+}
+.portfolio-section .portfolio-item-details{
+  display: block;
 }
