--- a/css/style.css
+++ b/css/style.css
@@ -755,11 +755,14 @@ portfolio section
   flex: 0 0 33.33%;
   max-width: 33.33%;
   padding: 15px;
-  cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
 }
 .portfolio-section .portfolio-item-inner {
   padding: 15px;
+  width: 100%;
   border-radius: 5px;
+  cursor: pointer;
 }
 .portfolio-section .portfolio-item-inner p{
   font-size:16px;
@@ -770,10 +773,32 @@ portfolio section
 .portfolio-section .portfolio-item-img img {
   border-radius: 5px;
   width: 100%;
+  transition: all 0.3s ease;
+}
+.portfolio-section .portfolio-item-inner:hover .portfolio-item-img img{
+  transform: translateY(-25px);
+} 
+.portfolio-section .portfolio-item-img{
+  position: relative;
 }
 .portfolio-section .portfolio-item-img .view-project{
-  display: none;
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--skin-color);
+  transition: all 0.3s ease;
+  position: absolute;
+  left: 0px;
+  bottom: -4px;
+  transform: translateY(-5px);
+  opacity: 0;
+  z-index: -1;
 }
+.portfolio-section .portfolio-item-inner:hover .view-project{
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .portfolio-section .portfolio-item-details {
   display: none;
 }
