--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,13 @@ global style
   --outer-shadow-0: 0 0 0 #d0d0d0, 0 0 0 #f8f8f8;
   /* "inset" Changes the shadow from an outer shadow (outset) to an inner shadow */
   --inner-shadow: inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;
+  --inner-shadow-0: inset 0 0 0 #d0d0d0, inset 0 0 0 #f8f8f8;
 }
 body {
   font-size: 16px;
   background-color: var(--bg-black-50);
   line-height: 1.5;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 *:not(i) {
   font-family: "Raleway", sans-serif;
@@ -764,8 +765,8 @@ portfolio section
   border-radius: 5px;
   cursor: pointer;
 }
-.portfolio-section .portfolio-item-inner p{
-  font-size:16px;
+.portfolio-section .portfolio-item-inner p {
+  font-size: 16px;
   margin: 10px 0 0;
   color: var(--text-black-600);
   text-transform: capitalize;
@@ -775,13 +776,13 @@ portfolio section
   width: 100%;
   transition: all 0.3s ease;
 }
-.portfolio-section .portfolio-item-inner:hover .portfolio-item-img img{
+.portfolio-section .portfolio-item-inner:hover .portfolio-item-img img {
   transform: translateY(-25px);
-} 
-.portfolio-section .portfolio-item-img{
+}
+.portfolio-section .portfolio-item-img {
   position: relative;
 }
-.portfolio-section .portfolio-item-img .view-project{
+.portfolio-section .portfolio-item-img .view-project {
   text-transform: capitalize;
   font-size: 16px;
   font-weight: 500;
@@ -794,11 +795,94 @@ portfolio section
   opacity: 0;
   z-index: -1;
 }
-.portfolio-section .portfolio-item-inner:hover .view-project{
+.portfolio-section .portfolio-item-inner:hover .view-project {
   transform: translateY(0);
   opacity: 1;
 }
 
 .portfolio-section .portfolio-item-details {
   display: none;
+}
+
+/*----------- 
+portfolio popup
+------------- */
+.portfolio-popup {
+  background-color: var(--bg-black-50);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  overflow-y: auto;
+}
+.portfolio-popup .pp-img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  border-radius: 5px;
+}
+.portfolio-popup .pp-main {
+  min-height: 100vh;
+  max-width: 1350px;
+  width: 85%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.portfolio-popup .pp-main-inner {
+  padding: 70px 0 50px;
+  position: relative;
+}
+
+.portfolio-popup .pp-project-details-btn {
+  position: absolute;
+  left: 0;
+  top: 15px;
+  border-radius: 30px;
+  font-size: 16px;
+  color: var(--skin-color);
+  padding: 0 15px;
+  cursor: pointer;
+  font-weight: 500;
+  height: 40px;
+  line-height: 40px;
+  transition: all 0.3s ease;
+}
+.portfolio-popup .pp-project-details-btn::after {
+  border-radius: 30px;
+}
+.portfolio-popup .pp-project-details-btn i {
+  margin-left: 4px;
+}
+.portfolio-popup .pp-close {
+  position: absolute;
+  right: 0;
+  top: 15px;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  cursor: pointer;
+  line-height: 35px;
+  font-size: 35px;
+  color: var(--text-black-600);
+  transition: all 0.3s ease;
+}
+.portfolio-popup .pp-close:after {
+  border-radius: 50%;
+}
+.portfolio-popup .pp-counter {
+  position: absolute;
+  right: 10px;
+  bottom: 5px;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  font-size: 16px;
+  color: var(--text-black-600);
 }
