--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
   font-size: 16px;
   background-color: var(--bg-black-50);
   line-height: 1.5;
-  overflow-y: hidden;
 }
 *:not(i) {
   font-family: "Raleway", sans-serif;
@@ -816,6 +815,82 @@ portfolio popup
   height: 100%;
   z-index: 1000;
   overflow-y: auto;
+  opacity: 0;
+  visibility: hidden;
+}
+.portfolio-popup .pp-details {
+  max-width: 1350px;
+  width: calc(85%+30px);
+  margin: auto;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+.portfolio-popup .description {
+  flex: 0 0 65%;
+  max-width: 65%;
+  padding: 0 15px;
+}
+.portfolio-popup .description p{
+  font-size:16px;
+  line-height:26px;
+  color: var(--bg-black-600);
+  margin: 0;
+}
+.portfolio-popup .pp-title{
+  padding: 0 15px;
+}
+.portfolio-popup .pp-title h2{
+  font-size: 28px;
+  color: var(--text-black-900);
+  text-transform: capitalize;
+  font-weight:600;
+  margin: 0 0 5px;
+}
+.portfolio-popup .pp-title p{
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-black-600);
+  margin: 0 0 15px;
+  border-bottom: 1px solid var(--bg-black-100);
+  padding-bottom: 10px;
+}
+.portfolio-popup .pp-title p span{
+  font-weight: 400;
+}
+.portfolio-popup .pp-project-details h3{
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--text-black-700);
+  margin: 0 0 15px;
+  transform: capitalize;
+}
+.portfolio-popup .info{
+  flex: 0 0 35%;
+  max-width: 35%;
+  padding: 0 15px;
+}
+.portfolio-popup .info ul li{
+  display: block;
+  margin-bottom: 10px;
+  color: var(--text-black-600);
+  font-size: 16px;
+  font-weight:600;
+}
+.portfolio-popup .info ul li:last-child{
+  margin-bottom: 0;
+}
+.portfolio-popup .info ul li span{
+  font-weight: 400;
+}
+.portfolio-popup .pp-details-inner {
+  padding: 60px 0;
+}
+.portfolio-popup .separator {
+  width: 100%;
+  height: 1px;
+  display: block;
+  background-color: var(--bg-black-100);
 }
 .portfolio-popup .pp-img {
   max-width: 100%;
@@ -885,4 +960,37 @@ portfolio popup
   line-height: 40px;
   font-size: 16px;
   color: var(--text-black-600);
+}
+
+.portfolio-popup .pp-prev,
+.portfolio-popup .pp-next {
+  position: fixed;
+  top: 50%;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 20px;
+  z-index: 1010;
+  color: var(--text-black-900);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  opacity: 0.5;
+}
+.portfolio-popup .pp-prev:hover,
+.portfolio-popup .pp-next:hover {
+  opacity: 1;
+}
+.portfolio-popup .pp-prev i,
+.portfolio-popup .pp-next i {
+  line-height: 40px;
+}
+.portfolio-popup .pp-prev i {
+  transform: rotate(180deg);
+}
+.portfolio-popup .pp-prev {
+  left: 15px;
+  transform: inverse(-1);
+}
+.portfolio-popup .pp-next {
+  right: 15px;
 }
