--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body {
   background-color: var(--bg-black-50);
   line-height: 1.5;
 }
+body.stop-scrolling {
+  overflow-y: hidden;
+}
 *:not(i) {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
@@ -758,13 +761,13 @@ portfolio section
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio-section .portfolio-item.hide{
+.portfolio-section .portfolio-item.hide {
   display: none;
-} 
-.portfolio-section .portfolio-item.show{
+}
+.portfolio-section .portfolio-item.show {
   display: block;
   animation: fadeInTop 0.5s ease;
-} 
+}
 .portfolio-section .portfolio-item-inner {
   padding: 15px;
   width: 100%;
@@ -821,9 +824,14 @@ portfolio popup
   width: 100%;
   height: 100%;
   z-index: 1000;
-  overflow-y: auto;
+  overflow-y: scroll;
   opacity: 0;
   visibility: hidden;
+  transition: all 0.3s ease;
+}
+.portfolio-popup.open {
+  visibility: visible;
+  opacity: 1;
 }
 .portfolio-popup .pp-details {
   max-width: 1350px;
@@ -832,29 +840,40 @@ portfolio popup
   max-height: 0;
   overflow: hidden;
   opacity: 0;
+  transition: all 0.5s ease;
 }
+.portfolio-popup .pp-details.active {
+  opacity: 1;
+}
+/* TODO: need to fix this problem */
 .portfolio-popup .description {
-  flex: 0 0 65%;
+  flex: 0 0 60%;
   max-width: 65%;
   padding: 0 15px;
 }
-.portfolio-popup .description p{
-  font-size:16px;
-  line-height:26px;
+.portfolio-popup .description p {
+  font-size: 16px;
+  line-height: 26px;
   color: var(--bg-black-600);
   margin: 0;
 }
-.portfolio-popup .pp-title{
+.portfolio-popup .pp-title {
   padding: 0 15px;
 }
-.portfolio-popup .pp-title h2{
+.portfolio-popup .pp-title .pp-project-category {
+  text-transform: capitalize;
+}
+.portfolio-popup .pp-title h2 {
   font-size: 28px;
   color: var(--text-black-900);
   text-transform: capitalize;
-  font-weight:600;
+  font-weight: 600;
   margin: 0 0 5px;
 }
-.portfolio-popup .pp-title p{
+.portfolio-popup .info a {
+  color: var(--skin-color);
+}
+.portfolio-popup .pp-title p {
   font-size: 14px;
   font-weight: 600;
   color: var(--text-black-600);
@@ -862,32 +881,35 @@ portfolio popup
   border-bottom: 1px solid var(--bg-black-100);
   padding-bottom: 10px;
 }
-.portfolio-popup .pp-title p span{
+.portfolio-popup .pp-title p span {
   font-weight: 400;
 }
-.portfolio-popup .pp-project-details h3{
+
+.portfolio-popup .pp-project-details h3 {
   font-size: 20px;
   font-weight: 600;
   color: var(--text-black-700);
   margin: 0 0 15px;
   transform: capitalize;
 }
-.portfolio-popup .info{
-  flex: 0 0 35%;
-  max-width: 35%;
+
+/* TODO: need to fix this problem */
+.portfolio-popup .info {
+  /* flex: 0 0 35%;
+  max-width: 35%; */
   padding: 0 15px;
 }
-.portfolio-popup .info ul li{
+.portfolio-popup .info ul li {
   display: block;
   margin-bottom: 10px;
   color: var(--text-black-600);
   font-size: 16px;
-  font-weight:600;
+  font-weight: 600;
 }
-.portfolio-popup .info ul li:last-child{
+.portfolio-popup .info ul li:last-child {
   margin-bottom: 0;
 }
-.portfolio-popup .info ul li span{
+.portfolio-popup .info ul li span {
   font-weight: 400;
 }
 .portfolio-popup .pp-details-inner {
