--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ img {
   cursor: pointer;
   border-radius: 30px;
   transition: all 0.3s ease;
+  border: none;
 }
 .btn-1:after {
   border-radius: 30px;
@@ -1022,4 +1023,44 @@ portfolio popup
 }
 .portfolio-popup .pp-next {
   right: 15px;
+}
+
+/* --------------- 
+contact section
+---------------- */
+.contact-section {
+  padding: 80px 0 80px;
+  min-height: 100vh;
+}
+.contact-section .contact-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  padding: 15px;
+  display: flex;
+}
+.contact-section .contact-item-inner {
+  padding: 30px 15px;
+  text-align: center;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+}
+.contact-section .contact-item-inner i {
+  font-size: 24px;
+  color: var(--skin-color);
+}
+.contact-section .contact-item-inner span {
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--text-black-700);
+  margin: 15px 0 10px;
+  text-transform: capitalize;
+  word-break: break;
+}
+.contact-section .contact-item-inner p {
+  font-size: 16px;
+  color: var(--text-black-600);
+  line-height: 26px;
+  margin: 0;
 }
