--- a/css/style.css
+++ b/css/style.css
@@ -1064,3 +1064,42 @@ contact section
   line-height: 26px;
   margin: 0;
 }
+
+.contact-section .contact-form {
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-top: 50px;
+}
+.contact-section .w-50 {
+  padding: 0 15px;
+  flex: 0 0 50%;
+}
+.contact-section .input-group {
+  margin: 0 0 25px;
+  transition: all 0.3s ease;
+  border-radius: 30px;
+}
+.contact-section .input-group::after {
+  border-radius: 30px;
+}
+.contact-section .input-group .input-control {
+  height: 45px;
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  padding: 0 15px;
+  color: var(--text-black-700);
+}
+.contact-section .input-group textarea.input-control{
+ height: 184px;
+ padding-top: 15px;
+ resize: none; 
+}
+.contact-section .submit-btn {
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: right;
+  padding: 0 15px;
+}
