--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body.stop-scrolling {
   padding: 0;
   box-sizing: border-box;
   outline: none;
+  scroll-behavior: smooth;
 }
 :before,
 :after {
@@ -1092,10 +1093,10 @@ contact section
   padding: 0 15px;
   color: var(--text-black-700);
 }
-.contact-section .input-group textarea.input-control{
- height: 184px;
- padding-top: 15px;
- resize: none; 
+.contact-section .input-group textarea.input-control {
+  height: 184px;
+  padding-top: 15px;
+  resize: none;
 }
 .contact-section .submit-btn {
   flex: 0 0 100%;
@@ -1107,7 +1108,7 @@ contact section
 /* ----- 
 blogs
 -------- */
-.blog-section{
+.blog-section {
   padding: 80px 0 80px;
   min-height: 100vh;
 }
