--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,35 @@ navigation menu
   visibility: hidden;
   overflow-y: auto;
 }
+.fade-out-effect {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--bg-black-50);
+  z-index: -1;
+  visibility: hidden;
+}
+.fade-out-effect.active {
+  visibility: visible;
+  z-index: 1000;
+  animation: fadeOut 0.3s ease-out;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.nav-menu.open {
+  visibility: visible;
+  opacity: 1;
+  z-index: 999;
+  transition: all 0.3s ease;
+}
 
 .nav-menu .close-nav-menu {
   height: 40px;
