--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -19,7 +19,7 @@
   width: 40px;
   text-align: center;
   font-size: 20px;
-  color: var(--text-black-900);
+  color: var(--skin-color);
   right: 100%;
   margin-right: 15px;
   cursor: pointer;
