--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ header
   position: relative;
   height: 2px;
   width: 16px;
-  background-color: var(--bg-black-900);
+  background-color: var(--skin-color);
 }
 .header .hamburger-btn span:before,
 .header .hamburger-btn span:after {
@@ -344,7 +344,7 @@ header
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: var(--bg-black-900);
+  background-color: var(--skin-color);
 }
 .header .hamburger-btn span:before {
   top: -6px;
